--- a/templates/base/buttons/button.confirm.latte
+++ b/templates/base/buttons/button.confirm.latte
@@ -1,4 +1,4 @@
-<button class="btn btn-primary btn-square join-item"
+<button class="btn btn-soft btn-primary btn-square join-item"
         type="submit"
         name="submit" value="{$value}" title="{$title}"
         {if isset($form_action)}formaction="{$form_action}"{/if}>
