--- a/templates/base/buttons/button.submit.latte
+++ b/templates/base/buttons/button.submit.latte
@@ -1,4 +1,4 @@
-<button class="btn btn-primary"
+<button class="btn btn-primary shadow-none leading-none px-4"
         name="submit" type="submit" value="{$text}">
     {$text}
 </button>
