--- a/templates/base/buttons/button.visible.latte
+++ b/templates/base/buttons/button.visible.latte
@@ -1,4 +1,4 @@
-<label class="swap btn btn-neutral btn-square join-item"
+<label class="swap btn btn-soft btn-primary shadow-none btn-square join-item"
        for="{$id ?? $name}">
     <input type="hidden" name="{$name}" value="0"/>
     <input id="{$id ?? $name}" type="checkbox" name="{$name}"
