--- a/templates/base/admin/plugin.latte
+++ b/templates/base/admin/plugin.latte
@@ -8,7 +8,7 @@
             <div class="space-y-4">
                 <h1 class="leading-none text-6xl font-bold">{text('plugin.plugins')}</h1>
 
-                <div n:if="$installed_plugins" class="overflow-x-auto">
+                <div n:if="$installed_plugins" class="overflow-x-auto rounded-box border border-base-content/5">
                     <table class="table">
                         <thead>
                         <tr>
@@ -35,24 +35,26 @@
                                            value="{$plugin->id}">
                                     <div class="join">
                                          <a n:if="$plugin->active" n:foreach="$plugin->getInfo()->getActions() as $action"
-                                                class="btn btn-neutral btn-square join-item"
+                                                class="btn btn-square btn-soft btn-primary shadow-none join-item"
                                                 title="{text($plugin->url.'.'.$action['text'])}"
                                                 href="{path('BASE_PATH') . 'admin' . DIRECTORY_SEPARATOR . 'plugin' . DIRECTORY_SEPARATOR . $plugin->url . DIRECTORY_SEPARATOR . $action['url']}">
                                                 {icon($action['icon'])|noescape}
                                         </a>
                                         <a n:if="$plugin->active && $plugin->getInfo()->hasCollection()"
-                                                class="btn btn-neutral btn-square join-item"
+                                                class="btn btn-square btn-soft btn-primary shadow-none join-item"
                                                 title="{text('plugin.collection')}"
                                                 href="{path('BASE_PATH') . 'admin' . DIRECTORY_SEPARATOR . 'plugin' . DIRECTORY_SEPARATOR . $plugin->url . DIRECTORY_SEPARATOR . 'collection'}">
                                             {icon("feather/package.svg")|noescape}
                                         </a>
                                         <a n:if="$plugin->active && $plugin->getInfo()->hasSettings()"
-                                                class="btn btn-neutral btn-square join-item"
+                                                class="btn btn-square btn-soft btn-primary shadow-none join-item"
                                                 title="{text('setting.settings')}"
                                                 href="{path('BASE_PATH') . 'admin' . DIRECTORY_SEPARATOR . 'plugin' . DIRECTORY_SEPARATOR . $plugin->url . DIRECTORY_SEPARATOR . 'settings'}">
                                             {icon("feather/settings.svg")|noescape}
                                         </a>
-                                        {button type:delete, name:"plugin[$key][delete]", value:"plugin_" . $plugin->id, id:$plugin->id, placeholder:$plugin->name}
+                                        {if !$plugin->parent_id}
+                                            {button type:delete, name:"plugin[$key][delete]", value:"plugin_" . $plugin->id, id:$plugin->id, placeholder:$plugin->name}
+                                        {/if}
                                     </div>
                                 </td>
                             </tr>
@@ -64,7 +66,7 @@
 
                 <div n:ifset="$uninstalled_plugins">
                     <label>
-                        <select class="select select-bordered w-full" name="plugin[][url]">
+                        <select class="select w-full" name="plugin[][url]">
                             <option disabled selected value>{text('plugin.select_to_install')}</option>
                             {foreach $uninstalled_plugins as $plugin}
                                 <option value="{$plugin->url}">{$plugin->name . ' (' . $plugin->description . ')'}
