--- a/templates/base/admin/template.latte
+++ b/templates/base/admin/template.latte
@@ -8,7 +8,7 @@
             <div class="space-y-4">
                 <h1 class="leading-none text-6xl font-bold">{text('template.templates')}</h1>
 
-                <div class="overflow-x-auto">
+                <div class="overflow-x-auto rounded-box border border-base-content/5">
                     <table class="table">
                         <thead>
                         <tr>
