--- a/templates/base/buttons/button.save.latte
+++ b/templates/base/buttons/button.save.latte
@@ -1,3 +1,3 @@
-<button class="btn btn-neutral btn-square join-item" type="submit">
+<button class="btn btn-soft btn-primary shadow-none btn-square join-item" type="submit">
     {icon("feather/save.svg")|noescape}
 </button>
