--- a/plugins/tags/template/manage.latte
+++ b/plugins/tags/template/manage.latte
@@ -2,7 +2,7 @@
 
 {block main}
     <main class="grow p-4 w-full max-w-5xl mx-auto">
-        <form action="{path('PUBLIC_URL') . 'admin/plugin/tag/post'}" method="POST" enctype="multipart/form-data">
+        <form action="{path('PUBLIC_URL') . 'admin/plugin/tags/post'}" method="POST" enctype="multipart/form-data">
             {csrf()}
 
             <div class="space-y-4">
