--- a/templates/base/admin/setting.latte
+++ b/templates/base/admin/setting.latte
@@ -57,17 +57,18 @@
                                 </tr>
                             {/if}
                         {/foreach}
-                            <tr>
-                                <td colspan="6">
-                                    <label>
-                                        <input class="input input-bordered w-full" type="text" name="setting[][name]" placeholder="{text('setting.add_name')}">
-                                    </label>
-                                </td>
-                            </tr>
                         </tbody>
                     </table>
                 </div>
-                <div n:else class="text-center">{text('setting.none_defined')}</div>
+                <div n:else class="text-center">
+                    {text('setting.none_defined')}
+                </div>
+
+                <div>
+                    <label>
+                        <input class="input input-bordered w-full" type="text" name="setting[][name]" placeholder="{text('setting.add_name')}">
+                    </label>
+                </div>
 
                 <div class="text-center">
                     {button type:submit, text:text('button.update')}
