--- a/templates/base/admin/plugin.latte
+++ b/templates/base/admin/plugin.latte
@@ -24,7 +24,13 @@
                         {foreach $installed_plugins as $key => $plugin}
                             <tr>
                                 <td>
-                                    {button type:switch, name:"plugin[$key][active]", value:$plugin->active}
+                                    {if canEditAsSuperAdmin()}
+                                        {button type:switch, name:"plugin[$key][active]", value:$plugin->active}
+                                    {else}
+                                        {if $plugin->active}
+                                            <div class="text-success">{icon("feather/check-square.svg")|noescape}</div>
+                                        {/if}
+                                    {/if}
                                 </td>
                                 <td><strong>{$plugin->name}</strong></td>
                                 <td>{$plugin->description}</td>
@@ -34,25 +40,25 @@
                                     <input type="hidden" name="plugin[{$key}][id]"
                                            value="{$plugin->id}">
                                     <div class="join">
-                                         <a n:if="$plugin->active" n:foreach="$plugin->getInfo()->getActions() as $action"
+                                        <a n:if="$plugin->active" n:foreach="$plugin->getInfo()->getActions() as $action"
                                                 class="btn btn-square btn-soft btn-primary shadow-none join-item"
                                                 title="{text($plugin->url.'.'.$action['text'])}"
                                                 href="{path('BASE_PATH') . 'admin' . DIRECTORY_SEPARATOR . 'plugin' . DIRECTORY_SEPARATOR . $plugin->url . DIRECTORY_SEPARATOR . $action['url']}">
-                                                {icon($action['icon'])|noescape}
+                                            {icon($action['icon'])|noescape}
                                         </a>
-                                        <a n:if="$plugin->active && $plugin->getInfo()->hasCollection()"
+                                        <a n:if="$plugin->active && $plugin->policy('collection')"
                                                 class="btn btn-square btn-soft btn-primary shadow-none join-item"
                                                 title="{text('plugin.collection')}"
                                                 href="{path('BASE_PATH') . 'admin' . DIRECTORY_SEPARATOR . 'plugin' . DIRECTORY_SEPARATOR . $plugin->url . DIRECTORY_SEPARATOR . 'collection'}">
                                             {icon("feather/package.svg")|noescape}
                                         </a>
-                                        <a n:if="$plugin->active && $plugin->getInfo()->hasSettings()"
+                                        <a n:if="$plugin->active && $plugin->policy('settings')"
                                                 class="btn btn-square btn-soft btn-primary shadow-none join-item"
                                                 title="{text('setting.settings')}"
                                                 href="{path('BASE_PATH') . 'admin' . DIRECTORY_SEPARATOR . 'plugin' . DIRECTORY_SEPARATOR . $plugin->url . DIRECTORY_SEPARATOR . 'settings'}">
                                             {icon("feather/settings.svg")|noescape}
                                         </a>
-                                        {if !$plugin->parent_id}
+                                        {if !$plugin->parent_id && $plugin->policy('uninstall')}
                                             {button type:delete, name:"plugin[$key][delete]", value:"plugin_" . $plugin->id, id:$plugin->id, placeholder:$plugin->name}
                                         {/if}
                                     </div>
@@ -62,23 +68,26 @@
                         </tbody>
                     </table>
                 </div>
-                <div n:else class="text-center">{text('plugin.none_installed')}</div>
-
-                <div n:ifset="$uninstalled_plugins">
-                    <label>
-                        <select class="select w-full" name="plugin[][url]">
-                            <option disabled selected value>{text('plugin.select_to_install')}</option>
-                            {foreach $uninstalled_plugins as $plugin}
-                                <option value="{$plugin->url}">{$plugin->name . ' (' . $plugin->description . ')'}
-                                </option>
-                            {/foreach}
-                        </select>
-                    </label>
+                <div n:else class="text-center">
+                    {text('plugin.none_installed')}
                 </div>
 
-                <div class="text-center">
-                    {button type:submit, text:text('button.update')}
-                </div>
+                {if canEditAsSuperAdmin()}
+                    <div n:ifset="$uninstalled_plugins">
+                        <label>
+                            <select class="select w-full" name="plugin[][url]">
+                                <option disabled selected value>{text('plugin.select_to_install')}</option>
+                                {foreach $uninstalled_plugins as $plugin}
+                                    <option value="{$plugin->url}">{$plugin->name . ' (' . $plugin->description . ')'}
+                                    </option>
+                                {/foreach}
+                            </select>
+                        </label>
+                    </div>
+                    <div class="text-center">
+                        {button type:submit, text:text('button.update')}
+                    </div>
+                {/if}
 
             </div>
         </form>
