--- a/templates/base/admin/setting.latte
+++ b/templates/base/admin/setting.latte
@@ -49,7 +49,7 @@
                                         <input n:if="$setting->plugin_id" type="hidden" name="setting[{$key}][plugin_id]"
                                                value="{$setting->plugin_id}">
                                         <div class="join">
-                                            {if !$setting->is_default && !$setting->plugin_id}
+                                            {if $setting->policy('delete')}
                                                 {button type:delete, name:"setting[$key][delete]", value:"setting_" . $setting->id, id:$setting->id, placeholder: $setting->name}
                                             {/if}
                                         </div>
