--- a/templates/base/css/output.css
+++ b/templates/base/css/output.css
@@ -2071,8 +2071,17 @@
   .h-auto {
     height: auto;
   }
+  .min-h-8 {
+    min-height: calc(var(--spacing) * 8);
+  }
+  .min-h-9 {
+    min-height: calc(var(--spacing) * 9);
+  }
   .min-h-10 {
     min-height: calc(var(--spacing) * 10);
+  }
+  .min-h-20 {
+    min-height: calc(var(--spacing) * 20);
   }
   .min-h-72 {
     min-height: calc(var(--spacing) * 72);
@@ -2332,8 +2341,23 @@
     --tw-font-weight: var(--font-weight-normal);
     font-weight: var(--font-weight-normal);
   }
+  .text-base-100 {
+    color: var(--color-base-100);
+  }
+  .text-base-200 {
+    color: var(--color-base-200);
+  }
+  .text-base-300 {
+    color: var(--color-base-300);
+  }
+  .text-neutral {
+    color: var(--color-neutral);
+  }
   .text-neutral-content {
     color: var(--color-neutral-content);
+  }
+  .text-success {
+    color: var(--color-success);
   }
   .italic {
     font-style: italic;
